--- a/src/components/InteractiveCodeBlock/themes.css
+++ b/src/components/InteractiveCodeBlock/themes.css
@@ -1,4 +1,20 @@
 :root {
+  --function: #4B22B0;
+  --types: #3F6E74;
+  --controlflow: #AD3DA4;
+  --variablename: #000000;
+  --regexp: #d16969;
+  --comment: #536579;
+  --keyword: #AD3DA4;
+  --numeric: #272AD8;
+  --string: #D12F1B;
+  --primitive: #713DA9;
+  --property: #816927;
+  --punctuation: #000000;
+  --operator: #000000;
+}
+
+.tm-theme-vscode {
   --function: #795E26;
   --types: #267f99;
   --controlflow: #AF00DB;
@@ -8,6 +24,7 @@
   --keyword: #0000ff;
   --numeric: #09885a;
   --string: #a31515;
+  --primitive: #0000ff;
   --property: #0451a5;
   --punctuation: #000000;
   --operator: #000000;
@@ -21,7 +38,7 @@
 .tm-theme .keyword.operator.new { color: var(--keyword); }
 .tm-theme .keyword.generator.asterisk { color: var(--keyword); }
 .tm-theme .punctuation.definition.template-expression { color: var(--keyword); }
-.tm-theme .support.type { color: var(--keyword); }
+.tm-theme .support.type { color: var(--primitive); }
 .tm-theme .constant.language { color: var(--keyword); }
 .tm-theme .variable.language { color: var(--keyword); }
 .tm-theme .string { color: var(--string); }
@@ -44,14 +61,14 @@
 .tm-theme .constant.language.nan.tsx { color: var(--numeric); }
 .tm-theme .constant.language.infinity.tsx { color: var(--numeric); }
 .tm-theme .keyword.operator { color: var(--operator); }
-.tm-theme .storage.type.function.arrow.tsx { color: var(--operator); }
+.tm-theme .storage.type.function.arrow.tsx { color: var(--keyword); }
 .tm-theme .meta.brace.angle.tsx { color: var(--punctuation); }
 .tm-theme .meta.brace.round.tsx { color: var(--punctuation); }
 .tm-theme .meta.brace.square.tsx { color: var(--punctuation); }
 .tm-theme .punctuation { color: var(--punctuation); }
 .tm-theme .constant.language.import-export-all.tsx { color: var(--punctuation); }
 .tm-theme .meta.delimiter.object.comma.tsx { color: var(--punctuation); }
-.tm-theme .comment { color: var(--comment); }
+.tm-theme .comment { color: var(--comment); font-style: italic; }
 .tm-theme .comment.block.tsx { color: var(--comment); }
 .tm-theme .comment.line.double-slash.tsx { color: var(--comment); }
 .tm-theme .punctuation.definition.comment.tsx { color: var(--comment); }
@@ -65,12 +82,38 @@
 .tm-theme .entity.name.type.module.tsx { color: var(--types); }
 .tm-theme .entity.name.type.enum.tsx { color: var(--types); }
 .tm-theme .entity.name.function { color: var(--function); }
+.tm-theme .function-call { color: var(--function); }
 .tm-theme .entity.name.type { color: var(--types); }
 .tm-theme .meta.template.expression.tsx { color: var(--types); }
 .tm-theme .variable { color: var(--variablename); }
 .tm-theme .entity.other.inherited-class.tsx { color: var(--types); }
-.tm-theme .constant.language.undefined.tsx { color: var(--keyword); }
+.tm-theme .constant.language.undefined.tsx { color: var(--primitive); }
 .tm-theme .variable.language.arguments.tsx { color: var(--variablename); }
 .tm-theme .support.type.object { color: var(--variablename); }
 .tm-theme .entity.name.tag { color: var(--types); }
-.tm-theme .entity.other.attribute-name { color: var(--variablename); }
+.tm-theme .entity.other.attribute-name { color: var(--property); }
+.tm-theme .variable.other.property,
+.tm-theme .variable.other.object.property,
+.tm-theme .support.variable.property { color: var(--property); }
+
+.keyword.control,
+.keyword.declaration,
+.keyword.expressions-and-types,
+.keyword.operator.new,
+.keyword.reserved,
+.keyword.statement,
+.storage.type,
+.storage.modifier,
+.constant.language,
+.variable.language.super,
+.variable.language.this,
+.text.html entity.name.tag,
+.meta.tag entity.name.tag,
+.meta.tag support.class,
+.string.regexp keyword.other {
+  font-weight: bold;
+}
+.keyword.operator,
+.meta.arrow {
+  font-weight: normal;
+}
