--- a/src/components/InteractiveCodeBlock/themes.css
+++ b/src/components/InteractiveCodeBlock/themes.css
@@ -38,6 +38,25 @@
   }
 }
 
+html[data-prefers-dark] {
+  --function: #FF816F;
+  --types: #91D462;
+  --controlflow: #FF7AB2;
+  --variablename: #ffffff;
+  --regexp: #d16969;
+  --comment: #7F8C99;
+  --keyword: #FF7AB2;
+  --numeric: #A79DF8;
+  --string: #FC6A5D;
+  --primitive: #8AD1C3;
+  --property: #8AD1C3;
+  --punctuation: #ffffff;
+  --operator: #ffffff;
+
+  --diagnostic-bg: rgba(218, 54, 63, 0.2);
+  --diagnostic-underline: rgba(218, 54, 63, 1);
+}
+
 .tm-theme-vscode {
   --function: #795E26;
   --types: #267f99;
