Fix accessibility bugs

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -23,7 +23,7 @@
   --color-bg90: rgba(255, 255, 255, 0.9);
   --color-bg100: rgba(255, 255, 255, 1);
 
-  --blue: #1382a4;
+  --blue: #107c9c;
 
   --background: var(--color-bg100);
   --background-alt: #fafafa;
