--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -32,6 +32,7 @@
   --secondaryText: var(--color-fg54);
   --disabledText: var(--color-fg32);
   --linkText: var(--blue);
+  --inlineCodeText: var(--string);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -62,36 +63,40 @@
 
     --background: var(--color-bg90);
     --background-alt: var(--color-bg100);
+
+    --linkText: #2ca7cc;
+    --inlineCodeText: var(--controlflow);
   }
 }
 
 html[data-prefers-dark] {
   --color-fg05: rgba(255, 255, 255, 0.05);
-    --color-fg10: rgba(255, 255, 255, 0.1);
-    --color-fg20: rgba(255, 255, 255, 0.2);
-    --color-fg32: rgba(255, 255, 255, 0.32);
-    --color-fg40: rgba(255, 255, 255, 0.4);
-    --color-fg54: rgba(255, 255, 255, 0.54);
-    --color-fg60: rgba(255, 255, 255, 0.6);
-    --color-fg70: rgba(255, 255, 255, 0.7);
-    --color-fg85: rgba(255, 255, 255, 0.85);
-    --color-fg90: rgba(255, 255, 255, 0.9);
-    --color-fg100: rgba(255, 255, 255, 1);
+  --color-fg10: rgba(255, 255, 255, 0.1);
+  --color-fg20: rgba(255, 255, 255, 0.2);
+  --color-fg32: rgba(255, 255, 255, 0.32);
+  --color-fg40: rgba(255, 255, 255, 0.4);
+  --color-fg54: rgba(255, 255, 255, 0.54);
+  --color-fg60: rgba(255, 255, 255, 0.6);
+  --color-fg70: rgba(255, 255, 255, 0.7);
+  --color-fg85: rgba(255, 255, 255, 0.85);
+  --color-fg90: rgba(255, 255, 255, 0.9);
+  --color-fg100: rgba(255, 255, 255, 1);
 
-    --color-bg05: rgba(0, 0, 0, 0.05);
-    --color-bg10: rgba(0, 0, 0, 0.1);
-    --color-bg20: rgba(0, 0, 0, 0.2);
-    --color-bg30: rgba(0, 0, 0, 0.3);
-    --color-bg40: rgba(0, 0, 0, 0.4);
-    --color-bg50: rgba(0, 0, 0, 0.5);
-    --color-bg60: rgba(0, 0, 0, 0.6);
-    --color-bg70: rgba(0, 0, 0, 0.7);
-    --color-bg80: rgba(0, 0, 0, 0.8);
-    --color-bg90: rgba(0, 0, 0, 0.9);
-    --color-bg100: rgba(0, 0, 0, 1);
+  --color-bg05: rgba(0, 0, 0, 0.05);
+  --color-bg10: rgba(0, 0, 0, 0.1);
+  --color-bg20: rgba(0, 0, 0, 0.2);
+  --color-bg30: rgba(0, 0, 0, 0.3);
+  --color-bg40: rgba(0, 0, 0, 0.4);
+  --color-bg50: rgba(0, 0, 0, 0.5);
+  --color-bg60: rgba(0, 0, 0, 0.6);
+  --color-bg70: rgba(0, 0, 0, 0.7);
+  --color-bg80: rgba(0, 0, 0, 0.8);
+  --color-bg90: rgba(0, 0, 0, 0.9);
+  --color-bg100: rgba(0, 0, 0, 1);
 
-    --background: var(--color-bg90);
-    --background-alt: var(--color-bg100);
+  --background: var(--color-bg90);
+  --background-alt: var(--color-bg100);
 
-    --linkText: #2ca7cc;
+  --linkText: #2ca7cc;
+  --inlineCodeText: var(--controlflow);
 }
