Finish typography, organize CSS

--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -29,7 +29,7 @@
 	<body>
 		<a href="#skip" class="visually-hidden">Skip to main content</a>
 
-		<div class="flex flex-col justify-between h-full max-w-3xl px-3.5 my-0 mx-auto">
+		<div class="flex flex-col justify-between h-full max-w-[var(--width-content)] px-[0.8rem] my-0 mx-auto">
 			<div>
 				<header>
 					<a href="/" class="home-link">{{ metadata.title }}</a>
