--- a/content/main.css
+++ b/content/main.css
@@ -1,3 +1,4 @@
+/* #region: variables */
 :root {
 	--rhythm: 1.6;
 	--font-display: "Heldane Display", Georgia, serif;
@@ -7,45 +8,193 @@
 	--swashes: "kern", "liga", "clig", "calt", "ss04", "ss05", "ss06", "ss07", "ss08", "ss09", "ss10", "onum";
 	--dlig: "kern", "liga", "clig", "calt";
 
-	--width-plus-phone: 414;
-	--width-big-enough: 550;
-	--width-tablet: 768;
+	--width-plus-phone: 414px;
+	--width-big-enough: 550px;
+	--width-tablet: 770px;
 
-	--rgb-primary: 0 0 0;
+	--width-content: 760px;
+
+	--color-fg05: rgba(0, 0, 0, 0.05);
+	--color-fg10: rgba(0, 0, 0, 0.1);
+	--color-fg20: rgba(0, 0, 0, 0.2);
+	--color-fg32: rgba(0, 0, 0, 0.32);
+	--color-fg40: rgba(0, 0, 0, 0.4);
+	--color-fg54: rgba(0, 0, 0, 0.54);
+	--color-fg60: rgba(0, 0, 0, 0.6);
+	--color-fg70: rgba(0, 0, 0, 0.7);
+	--color-fg85: rgba(0, 0, 0, 0.85);
+	--color-fg90: rgba(0, 0, 0, 0.9);
+	--color-fg100: rgba(0, 0, 0, 1);
+
+	--color-bg05: rgba(255, 255, 255, 0.05);
+	--color-bg10: rgba(255, 255, 255, 0.1);
+	--color-bg20: rgba(255, 255, 255, 0.2);
+	--color-bg30: rgba(255, 255, 255, 0.3);
+	--color-bg40: rgba(255, 255, 255, 0.4);
+	--color-bg50: rgba(255, 255, 255, 0.5);
+	--color-bg60: rgba(255, 255, 255, 0.6);
+	--color-bg70: rgba(255, 255, 255, 0.7);
+	--color-bg85: rgba(255, 255, 255, 0.85);
+	--color-bg90: rgba(255, 255, 255, 0.9);
+	--color-bg100: rgba(255, 255, 255, 1);
+
+	--rgb-accent: 255 127 127;
+	--color-accent: rgb(var(--rgb-accent));
+	--rgb-accent-dark: 181, 90, 90;
+	--color-accent-dark: rgb(var(--rgb-accent-dark));
+	--rgb-accent-light: 255, 192, 192;
+	--color-accent-light: rgb(var(--rgb-accent-light));
+	--rgb-blue: #0070ae;
+	--color-blue: rgb(var(--rgb-blue));
+
+	--color-background: var(--color-bg100);
+	--color-text-primary: var(--color-fg85);
+	--color-text-muted: var(--color-fg70);
+	--color-text-secondary: var(--color-fg54);
+	--color-text-disabled: var(--color-fg32);
+	--color-text-link: var(--blue);
+	--color-text-inline-code: var(--red-dark);
+	--color-text-high-contrast: var(--color-fg100);
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--rgb-primary: 255 255 255;
+		--color-fg05: rgba(255, 255, 255, 0.05);
+		--color-fg10: rgba(255, 255, 255, 0.1);
+		--color-fg20: rgba(255, 255, 255, 0.2);
+		--color-fg32: rgba(255, 255, 255, 0.32);
+		--color-fg40: rgba(255, 255, 255, 0.4);
+		--color-fg54: rgba(255, 255, 255, 0.54);
+		--color-fg60: rgba(255, 255, 255, 0.6);
+		--color-fg70: rgba(255, 255, 255, 0.7);
+		--color-fg85: rgba(255, 255, 255, 0.85);
+		--color-fg90: rgba(255, 255, 255, 0.9);
+		--color-fg100: rgba(255, 255, 255, 1);
+
+		--color-bg05: rgba(0, 0, 0, 0.05);
+		--color-bg10: rgba(0, 0, 0, 0.1);
+		--color-bg20: rgba(0, 0, 0, 0.2);
+		--color-bg30: rgba(0, 0, 0, 0.3);
+		--color-bg40: rgba(0, 0, 0, 0.4);
+		--color-bg50: rgba(0, 0, 0, 0.5);
+		--color-bg60: rgba(0, 0, 0, 0.6);
+		--color-bg70: rgba(0, 0, 0, 0.7);
+		--color-bg80: rgba(0, 0, 0, 0.8);
+		--color-bg90: rgba(0, 0, 0, 0.9);
+		--color-bg100: rgba(0, 0, 0, 1);
+
+		--color-background: var(--color-bg90);
+		--color-background-alt: var(--color-bg100);
+
+		--color-text-link: #2ca7cc;
+		--color-text-inline-code: var(--red-light);
 	}
 }
+/* #endregion */
 
-:root {
-	--color-primary: rgb(var(--rgb-primary));
-	--color-secondary: rgb(var(--rgb-primary) / 0.54);
-}
-
+/* #region: layout */
 html {
 	height: 100%;
 	min-height: 100%;
-	background-color: var(--background);
-}
-
-body {
-	color: var(--color-primary);
-	-webkit-font-smoothing: antialiased;
+	background-color: var(--color-background);
 	font: 112.5% / var(--rhythm) var(--font-serif);
 	font-weight: 300;
+	color: var(--color-text-primary);
+	-webkit-font-smoothing: antialiased;
 	word-wrap: break-word;
 	font-kerning: normal;
 	-moz-font-feature-settings: var(--dlig);
 	-ms-font-feature-settings: var(--dlig);
 	-webkit-font-feature-settings: var(--dlig);
 	font-feature-settings: var(--dlig);
-
-	min-height: 100%;
 }
 
+body {
+	min-height: 100%;
+}
+/* #endregion */
+
+/* #region: markdown */
+
+/* #region: blocks */
+
+/* #region all */
+img,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hgroup,
+ul,
+ol,
+dl,
+dd,
+p,
+figure,
+pre,
+table,
+fieldset,
+blockquote {
+	margin-bottom: calc(var(--rhythm) * 1rem);
+}
+/* #endregion */
+
+/* #region: headings */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	-webkit-font-smoothing: auto;
+	font-feature-settings: var(--swashes);
+	line-height: 1.1;
+	color: var(--color-text-high-contrast);
+	font-weight: 300;
+	text-rendering: optimizeLegibility;
+}
+
+h1 .anchor svg,
+h2 .anchor svg,
+h3 .anchor svg,
+h4 .anchor svg,
+h5 .anchor svg,
+h6 .anchor svg {
+	fill: var(--color-text-primary);
+}
+
+h1 code,
+h2 code,
+h3 code {
+	font-size: 0.8em;
+	font-variant: normal;
+	font-weight: bold;
+}
+
+h1 {
+	font-family: var(--font-display);
+	-webkit-font-smoothing: antialiased;
+	font-size: 2.4rem;
+}
+
+h2 {
+	font-size: 1.69093rem;
+}
+
+h3 {
+	font-variant: small-caps;
+	text-transform: lowercase;
+	letter-spacing: 3px;
+	font-weight: 500;
+	font-size: 1rem;
+	margin-bottom: calc(var(--rhythm) * 0.25rem);
+	font-feature-settings: var(--swashes);
+}
+/* #endregion */
+
+/* #region: math */
 .katex {
 	font-size: 0.9rem;
 }
@@ -76,17 +225,48 @@ li > .katex {
 .katex-display .katex-html .base:last-child {
 	padding-right: calc(var(--rhythm) * 0.5rem);
 }
+/* #endregion */
 
+/* #region: others */
 pre {
 	line-height: var(--rhythm);
 }
 
+@media (min-width: var(--width-big-enough)) {
+	ol,
+	ul {
+		min-width: 50rem;
+		margin-left: 2rem;
+	}
+}
+
+figure img {
+	margin-bottom: 0;
+}
+
+figcaption {
+	font-family: var(--font-grotesk);
+	font-size: 90%;
+	color: var(--color-text-secondary);
+	margin-top: calc(var(--rhythm) * 0.4rem);
+	text-align: center;
+}
+
+.footnotes p {
+	display: inline;
+	font-size: 0.9rem;
+}
+/* #endregion */
+
+/* #endregion */
+
+/* #region: inlines */
 :not(pre) > code {
 	font-family: var(--font-mono);
 	font-variant-ligatures: "none";
 	font-feature-settings: "normal";
 	font-size: 0.8rem;
-	color: var(--inlineCodeText);
+	color: var(--color-inline-code);
 	border-radius: 3px;
 }
 
@@ -107,11 +287,6 @@ a > code {
 	color: inherit;
 }
 
-.footnotes p {
-	display: inline;
-	font-size: 0.9rem;
-}
-
 .footnote-backref {
 	font-size: 0;
 	position: relative;
@@ -123,121 +298,11 @@ a > code {
 	position: absolute;
 	left: 0;
 }
+/* #endregion */
 
-@media (min-width: var(--width-big-enough)) {
-	ol,
-	ul {
-		min-width: 50rem;
-		margin-left: 2rem;
-	}
-}
+/* #endregion */
 
-h1 {
-	font-family: var(--font-display);
-	-webkit-font-smoothing: antialiased;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	-webkit-font-smoothing: auto;
-	font-feature-settings: var(--swashes);
-	line-height: 1.1;
-	color: var(--color-text-high-contrast);
-	font-weight: 300;
-	text-rendering: optimizeLegibility;
-}
-
-h1 .anchor svg,
-h2 .anchor svg,
-h3 .anchor svg,
-h4 .anchor svg,
-h5 .anchor svg,
-h6 .anchor svg {
-	fill: var(--color-text-primary);
-}
-
-.post-body .intro-caps {
-	font-variant: small-caps;
-	letter-spacing: 0.3px;
-	font-feature-settings: var(--dlig);
-}
-
-.post-body h3 {
-	font-variant: small-caps;
-	text-transform: lowercase;
-	letter-spacing: 3px;
-	font-weight: 500;
-	font-size: 1rem;
-	margin-bottom: calc(var(--rhythm) * 0.25rem);
-	font-feature-settings: var(--swashes);
-}
-
-.post-body h3 code {
-	font-size: 0.8em;
-	font-variant: normal;
-	font-weight: bold;
-}
-
-hr {
-	background: var(--color-fg20);
-}
-
-img {
-	width: 100%;
-	max-width: 100vw;
-}
-
-@media (min-width: var(--width-plus-phone)) {
-	img {
-		margin-left: 0;
-		margin-right: 0;
-		max-width: 100%;
-	}
-}
-
-figcaption {
-	font-family: var(--font-grotesk);
-	color: var(--color-secondary);
-	margin-top: calc(var(--rhythm) * 0.4rem);
-	font-size: 0.9rem;
-	font-weight: 500;
-	text-align: center;
-}
-
-img,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hgroup,
-ul,
-ol,
-dl,
-dd,
-p,
-figure,
-pre,
-table,
-fieldset,
-blockquote {
-	margin-bottom: calc(var(--rhythm) * 1rem);
-}
-
-h1 {
-	font-size: 2.4rem;
-}
-
-h2 {
-	font-size: 1.69093rem;
-}
-
-/* https://www.a11yproject.com/posts/how-to-hide-content/ */
+/* #region utilities */
 .visually-hidden {
 	clip: rect(0 0 0 0);
 	clip-path: inset(50%);
@@ -247,9 +312,11 @@ h2 {
 	white-space: nowrap;
 	width: 1px;
 }
+/* #endregion */
 
+/* #region components */
 .asterism {
-	color: var(--color-secondary);
+	color: var(--color-text-secondary);
 	font-family: AppleGothic, serif;
 	font-size: 1.5rem;
 	text-align: center;
@@ -260,3 +327,4 @@ h2 {
 	letter-spacing: 0.3px;
 	font-feature-settings: "kern", "liga", "clig", "calt", "ss04", "ss05", "ss06", "ss07", "ss08", "ss09", "ss10", "onum";
 }
+/* #endregion */
