--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -4,7 +4,7 @@ layout: base
 <div class="post-body">
 	<h1
 		{% if bigTitle %}
-			class="font-normal text-center text-textHighContrast text-[2.4rem] md:text-[3.4rem]"
+			class="font-normal text-center text-textHighContrast text-[2.8rem] md:text-[3.4rem]"
 		{% endif %}
 	>
 		{{ title }}
@@ -14,7 +14,7 @@ layout: base
 					before:content-['~'] before:pr-[.64rem] before:text-textDisabled
 					after:content-['~'] after:pl-[.64rem] after:text-textDisabled
 					antialiased text-center text-[1.2rem] italic text-textSecondary
-					justify-center
+					flex justify-center items-center
 				"
 			>
 				{{ subtitle }}
