--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -19,9 +19,9 @@
 		{% include 'katex/dist/katex.min.css' %}
 		{% endcss %}
 		{% css %}
-		{% include 'uno.css' %}
-		{% include 'fonts.css' %}
-		{% include 'main.css' %}
+		{% include 'styles/uno.css' %}
+		{% include 'styles/fonts.css' %}
+		{% include 'styles/main.css' %}
 		{% endcss %}
 		<link rel="stylesheet" href="{% getBundleFileUrl "css", "lib" %}">
 		<link rel="stylesheet" href="{% getBundleFileUrl "css" %}">
