--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -31,15 +31,21 @@
 
 		<div class="flex flex-col justify-between h-full max-w-[var(--width-content)] px-[0.8rem] my-0 mx-auto">
 			<div>
-				<header>
-					<a href="/" class="home-link">{{ metadata.title }}</a>
-
+				<header class="mt-4 mb-8 flex items-center justify-between">
 					<nav>
 						<h2 class="visually-hidden">Top level navigation menu</h2>
-						<ul class="nav">
-							<li class="nav-item">
+
+						<ul class="flex items-center m-0">
+							<li class="mr-6">
+								<a href="/">
+									<img src="/images/logo.svg" width="64" height="64" class="m-0" alt="Andrew Branch">
+								</a>
+							</li>
+
+							<li class="pt-4">
 								<a
 									href="/about"
+									class="font-grotesk text-textSecondary lowercase no-underline hover:underline"
 									{% if entry.url == '/about' %}
 										aria-current="page"
 									{% endif %}
@@ -48,6 +54,13 @@
 							</li>
 						</ul>
 					</nav>
+
+					<div class="pt-4">
+						<a href="https://github.com/andrewbranch/blog" class="text-[28px]">
+							<span class="visually-hidden">View source on GitHub</span>
+							<div aria-hidden="true" class="i-mdi:github"></div>
+						</a>
+					</div>
 				</header>
 				<main id="skip">
 					{{ content }}
