--- a/content/styles/fonts.css
+++ b/content/styles/fonts.css
@@ -1,8 +1,8 @@
 @font-face {
 	font-family: "Heldane";
 	src:
-		url("/fonts/HeldaneTextWeb-Regular.woff2") format("woff2"),
-		url("/fonts/HeldaneTextWeb-Regular.woff") format("woff");
+		url("/styles/fonts/HeldaneTextWeb-Regular.woff2") format("woff2"),
+		url("/styles/fonts/HeldaneTextWeb-Regular.woff") format("woff");
 	font-weight: normal;
 	font-style: normal;
 }
@@ -10,8 +10,8 @@
 @font-face {
 	font-family: "Heldane";
 	src:
-		url("/fonts/HeldaneTextWeb-RegularItalic.woff2") format("woff2"),
-		url("/fonts/HeldaneTextWeb-RegularItalic.woff") format("woff");
+		url("/styles/fonts/HeldaneTextWeb-RegularItalic.woff2") format("woff2"),
+		url("/styles/fonts/HeldaneTextWeb-RegularItalic.woff") format("woff");
 	font-weight: normal;
 	font-style: italic;
 }
@@ -19,8 +19,8 @@
 @font-face {
 	font-family: "Heldane";
 	src:
-		url("/fonts/HeldaneTextWeb-Medium.woff2") format("woff2"),
-		url("/fonts/HeldaneTextWeb-Medium.woff") format("woff");
+		url("/styles/fonts/HeldaneTextWeb-Medium.woff2") format("woff2"),
+		url("/styles/fonts/HeldaneTextWeb-Medium.woff") format("woff");
 	font-weight: 500;
 	font-style: normal;
 }
@@ -28,8 +28,8 @@
 @font-face {
 	font-family: "Heldane";
 	src:
-		url("/fonts/HeldaneTextWeb-MediumItalic.woff2") format("woff2"),
-		url("/fonts/HeldaneTextWeb-MediumItalic.woff") format("woff");
+		url("/styles/fonts/HeldaneTextWeb-MediumItalic.woff2") format("woff2"),
+		url("/styles/fonts/HeldaneTextWeb-MediumItalic.woff") format("woff");
 	font-weight: 500;
 	font-style: italic;
 }
@@ -37,17 +37,24 @@
 @font-face {
 	font-family: "Heldane Display";
 	src:
-		url("/fonts/HeldaneDisplayWeb-Regular.woff2") format("woff2"),
-		url("/fonts/HeldaneDisplayWeb-Regular.woff") format("woff");
+		url("/styles/fonts/HeldaneDisplayWeb-Regular.woff2") format("woff2"),
+		url("/styles/fonts/HeldaneDisplayWeb-Regular.woff") format("woff");
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: "Founders Grotesk";
+	src: url("/styles/fonts/FoundersGroteskWeb-Regular.woff2") format("woff2");
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Founders Grotesk";
 	src:
-		url("/fonts/FoundersGroteskWeb-Medium.woff2") format("woff2"),
-		url("/fonts/FoundersGroteskWeb-Medium.woff") format("woff");
+		url("/styles/fonts/FoundersGroteskWeb-Medium.woff2") format("woff2"),
+		url("/styles/fonts/FoundersGroteskWeb-Medium.woff") format("woff");
 	font-weight: 500;
 	font-style: normal;
 }
