--- a/content/styles/uno.css
+++ b/content/styles/uno.css
@@ -19,7 +19,9 @@
 .mx-auto{margin-left:auto;margin-right:auto;}
 .my{margin-top:1rem;margin-bottom:1rem;}
 .my-0{margin-top:0;margin-bottom:0;}
+.my-1{margin-top:calc(var(--rhythm) * .25rem * 1);margin-bottom:calc(var(--rhythm) * .25rem * 1);}
 .mb-2{margin-bottom:calc(var(--rhythm) * .25rem * 2);}
+.mb-4{margin-bottom:calc(var(--rhythm) * .25rem * 4);}
 .mb-8{margin-bottom:calc(var(--rhythm) * .25rem * 8);}
 .me{margin-inline-end:1rem;}
 .mr-6{margin-right:calc(var(--rhythm) * .25rem * 6);}
@@ -42,7 +44,9 @@
 .before\:pr-\[\.64rem\]::before{padding-right:.64rem;}
 .after\:pl-\[\.64rem\]::after{padding-left:.64rem;}
 .text-center{text-align:center;}
+.text-\[0\.8rem\]{font-size:0.8rem;}
 .text-\[1\.2rem\]{font-size:1.2rem;}
+.text-\[1\.419rem\]{font-size:1.419rem;}
 .text-\[2\.8rem\]{font-size:2.8rem;}
 .text-\[28px\]{font-size:28px;}
 .font-medium{font-weight:500;}
