--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -45,7 +45,7 @@
 						<ul class="flex items-center m-0 font-grotesk font-medium text-textSecondary lowercase">
 							<li class="mr-6">
 								<a href="/">
-									<img src="/images/logo.svg" width="64" height="64" class="m-0" alt="Andrew Branch">
+									<img src="/images/logo.svg" width="64" height="64" class="m-0 rounded" alt="Andrew Branch">
 								</a>
 							</li>
 
