--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -1,7 +1,7 @@
 ---
 layout: base
 ---
-<div class="post-body">
+<div class="post-body slide-enter-content">
 	<h1
 		{% if bigTitle %}
 			class="font-normal text-center text-textHighContrast text-[2.8rem] md:text-[3.4rem]"
