--- a/content/index.liquid
+++ b/content/index.liquid
@@ -18,7 +18,7 @@ title: Blog Posts
 						: {{ post.data.subtitle }}
 					{% endif %}
 				</h2>
-				<p class="font-grotesk text-textSecondary">{{ post.data.tagline }}</p>
+				<p class="font-grotesk text-textSecondary lh-[1.25]">{{ post.data.tagline }}</p>
 			</a>
 		</li>
 	{% endfor %}
