--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -38,4 +38,56 @@ layout: base
 		</p>
 	{% endif %}
 	{{ content }}
+
+	{% for post in collections.post %}
+		{% if post.url == page.url %}
+			{% unless forloop.last %}
+				{% assign newerIndex = forloop.index0 | plus: 1 %}
+				{% assign newer = collections.post[newerIndex] %}
+			{% endunless %}
+			{% unless forloop.first %}
+				{% assign olderIndex = forloop.index0 | minus: 1 %}
+				{% assign older = collections.post[olderIndex] %}
+			{% endunless %}
+			{% break %}
+		{% endif %}
+	{% endfor %}
+
+	<div class="flex flex-col md:flex-row justify-between divide-y md:divide-x md:divide-y-0 p-2 mt-8">
+		<div class="basis-1/2">
+			{% if newer %}
+				<a href="{{ newer.url }}" class="rounded inline-block no-underline pb-2 md:pr-2 md:pb-0">
+					<div class="text-textSecondary flex items-center">
+						<span aria-hidden="true" class="inline-block i-mdi:arrow-left-thin-circle-outline mr-1"></span>
+						<span class="font-grotesk font-medium">newer</span>
+					</div>
+					<span class="font-grotesk underline">
+						{{ newer.data.title }}
+						{%- if newer.data.subtitle -%}
+							: {{ newer.data.subtitle }}
+						{%- endif -%}
+					</span>
+				</a>
+			{% endif %}
+		</div>
+		<div class="basis-1/2">
+			{% if older %}
+				<a
+					href="{{ older.url }}"
+					class="rounded md:text-right inline-block no-underline pt-2 md:pl-2 md:pt-0"
+				>
+					<div class="text-textSecondary flex items-center justify-end">
+						<span class="font-grotesk font-medium">older</span>
+						<span aria-hidden="true" class="inline-block i-mdi:arrow-right-thin-circle-outline ml-1"></span>
+					</div>
+					<span class="font-grotesk underline">
+						{{ older.data.title }}
+						{%- if older.data.subtitle -%}
+							: {{ older.data.subtitle }}
+						{%- endif -%}
+					</span>
+				</a>
+			{% endif %}
+		</div>
+	</div>
 </div>
