--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -77,9 +77,11 @@
 			<footer class="mt-8">
 				<p class="font-grotesk text-center text-textSecondary">
 					<small
-						>&copy; {{ 'now' | date: '%Y' }} Andrew Branch / Licensed under
-						<a href="http://creativecommons.org/licenses/by/4.0/legalcode">CC-BY-4.0</a></small
-					>
+						>&copy; {{ 'now' | date: '%Y' }} Andrew Branch
+						<a href="http://creativecommons.org/licenses/by/4.0/legalcode">CC-BY-4.0</a>
+						<br>
+						<a href="/feed.xml">Atom</a> / <a href="/feed.json">JSON</a>
+					</small>
 				</p>
 			</footer>
 		</div>
