Fix strong weight for Heldane

--- a/content/styles/main.css
+++ b/content/styles/main.css
@@ -304,6 +304,10 @@ code {
 	color: var(--color-text-inline-code);
 }
 
+strong {
+	font-weight: 500;
+}
+
 a {
 	text-decoration-skip: ink;
 	text-decoration-skip-ink: auto;
